Correcting alignment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   min-height: 100vh;
-  align-content: center;
+  align-items: center;
   justify-content: center;
   background: rgb(44, 33, 65);
   background: linear-gradient(
